--- a/mission/styles.css
+++ b/mission/styles.css
@@ -54,7 +54,7 @@ body {
     font-size: 1.5rem;
   }
   .dark {
-    background-color: #333;
+    background-color: black;
     color: white;
   }
   
