Applied new changes to Coolpics

--- a/coolpics/coolpics.css
+++ b/coolpics/coolpics.css
@@ -135,3 +135,56 @@ footer {
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
+dialog {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 10;
+  border: none;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start; 
+  box-sizing: border-box;
+}
+
+dialog img {
+  margin: 20vh auto 0 auto;
+  width: 90%;
+  max-height: 100%;
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.5);
+}
+
+.close-viewer {
+  position: absolute;
+  top: 20vh;
+  right: 5%;
+  font-size: 1.5rem;
+  background: var(--primary-color);
+  color: var(--text-light);
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  padding: 0.3rem 0.6rem;
+}
+
+@media screen and (min-width: 1000px) {
+  dialog img {
+    width: 50%;
+    max-height: 80vh;
+    margin-top: 15vh;
+  }
+
+  .close-viewer {
+    top: 15vh;
+  }
+}
+
+.hide {
+  display: none;
+}
