--- a/jackwebsite/styles.css
+++ b/jackwebsite/styles.css
@@ -239,7 +239,7 @@ header p {
 }
 
 .product-image {
-  background: #eef5e7; /* soft green tint */
+  background: #d5ddcd; /* soft green tint */
   height: 250px;
   display: flex;
   align-items: center;
